# minipirineu

./: .env.example  .gitignore  CLAUDE.md  MiniPrevi_PiriNeu.md  README.md  pyproject.toml  verification.sqlite
.github/actions/datastore-checkout/: action.yml
.github/actions/datastore-commit/: action.yml
.github/workflows/: ci.yml  forecast.yml  meteocat.yml  probe-meteocat.yml
assets/: style.css
data/: meteocat.json  openmeteo.json
docs/: ROADMAP.md  STAGE-0-IMPLEMENTATION.md  brief-amendments.md
docs/adr/: 0001-open-meteo-over-raw-grids.md  0002-datastore-branch-archive-before-parse.md  0003-verification-first-gate.md
docs/notes/: gated-model-columns.md  harmonie-coverage.md  meteocat-pronostic-semantics.md  snowfall-semantics.md  xema-truth-stations.md
scripts/: record_meteocat_fixtures.py  record_xema_parity.py
src/minipirineu/: aggregate.py  archive.py  config.py  envfile.py  freezing_level.py  ingest_meteocat.py  ingest_openmeteo.py  ingest_xema.py  meteocat.py  meteocat_labels.py  openmeteo.py  render.py  render_meteocat.py  store.py  xema_opendata.py
templates/: index.html.tmpl
tests/: test_aggregate.py  test_archive.py  test_config.py  test_envfile.py  test_freezing_level.py  test_freshness.py  test_ingest_meteocat.py  test_ingest_openmeteo.py  test_ingest_xema.py  test_meteocat.py  test_openmeteo.py  test_render.py  test_store.py  test_xema_opendata.py
tests/fixtures/: openmeteo_baqueira_2000.json  openmeteo_gated_baqueira_2000.json  openmeteo_wide_baqueira_1500.json  xema_opendata_z1_z9_20260201.json
(+6 files in other folders)
