[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minipirineu"
version = "0.1.0"
description = "Nieve prevista a 48h por cota en Baqueira, Boí Taüll y La Molina (AROME vía Open-Meteo)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    # zoneinfo has no system tz database to fall back on under Windows
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: hits real external APIs; opt-in with `pytest -m live`",
]
